--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-redux-crypto-tracker",
+  "name": "Cryptonite",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -21,7 +21,7 @@
     "postinstall": "npm run remotedev && rndebugger-open"
   },
   "remotedev": {
-    "hostname": "192.168.8.52",
+    "hostname": "192.168.0.11",
     "port": 5678
   },
   "jest": {
